@@ -32,13 +32,13 @@ setup(name = 'numericube-twistranet',
       zip_safe = False,
       dependency_links = ['http://django-modeltranslation.googlecode.com/files/django-modeltranslation-0.2.tar.gz',],
       install_requires = [
-          'Django<=1.3.3',
-          'django-debug-toolbar==0.8.4',
-          'django-piston==0.2.2',
-          'django-haystack==1.1.0',
-          'django-tinymce==1.5.1a1',
-          'django-modeltranslation==0.2',
-          'sorl-thumbnail==11.01',
+          'Django<1.5.0',
+          'django-debug-toolbar==0.9.4',
+          'django-piston==0.2.2.1',
+          'django-haystack==1.2.7',
+          'django-tinymce==1.5.1b4',
+          'django-modeltranslation==0.4.1',
+          'sorl-thumbnail==11.12',
           # -*- Extra requirements: -*-
       ],
       entry_points = """
