@@ -1,3 +1,7 @@
+Unreleased
+==========
+* django 1.4 compliance in progress
+
 2.0-alpha, 2011/10/04
 =====================
 
